--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ compileJava {
 }
 
 // SkBee version
-version = '3.6.1'
+version = '3.6.2'
 def latestJava = 21
 def oldestJava = 17
 
@@ -51,7 +51,7 @@ dependencies {
     }
 
     // FastBoard
-    implementation("fr.mrmicky:fastboard:2.1.2")
+    implementation("fr.mrmicky:fastboard:2.1.3")
 
     // Virtual Furnace
     implementation("com.github.ShaneBeeStudios:VirtualFurnace:1.0.0") {
@@ -100,7 +100,7 @@ shadowJar {
 tasks.register('server', Copy) {
     from shadowJar
     // Change this to wherever you want your jar to build
-    into '/Users/ShaneBee/Desktop/Server/Skript/1-21-1/plugins'
+    into 'C:\\Users\\Kenny\\Desktop\\SkBee Jar'
 }
 
 publishing {
