improve issues tab

--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -2,7 +2,7 @@ blank_issues_enabled: false
 contact_links:
   - name: 🦆 skUnity Discord
     url: https://discord.gg/skript
-    about: For general help with SkBee join skUnity's Discord
+    about: For general help with SkBee-Continued join skUnity's Discord
   - name: 🚰 SpigotMC Resource
-    url: https://www.spigotmc.org/resources/skbee-skript-addon.75839/
-    about: Read about SkBee!
+    url: https://www.spigotmc.org/resources/skbee-continued.120039/
+    about: Read about SkBee-Continued!
