--- a/.github/ISSUE_TEMPLATE/report-a-bug.yml
+++ b/.github/ISSUE_TEMPLATE/report-a-bug.yml
@@ -35,7 +35,7 @@ body:
   - type: input
     attributes:
       label: SkBee Version
-      description: Which version of SkBee are you using?
+      description: Which version of SkBee-Continued are you using?
       placeholder: |
         Ex: "1.0.0"
     validations:
@@ -52,7 +52,7 @@ body:
 
   - type: textarea
     attributes:
-      label: SkBee Info
+      label: SkBee-Continued Info
       description: Run '/skbee info' and paste here!
     validations:
       required: true
